[package]
name = "tracel-artifact"
description = "Artifact bundle and transfer utilities for Tracel SDK."
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
# The reqwest-based transfer client for Tracel's HTTP platforms. Off by default so the bundle
# traits stay dependency-light and wasm-buildable.
transfer = ["dep:reqwest"]

[dependencies]
reqwest = { version = "0.13.4", features = ["blocking"], optional = true }
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
