[package]
name = "tracel-cli"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
clap.workspace = true
tracel-experiment.workspace = true
serde.workspace = true
serde_json.workspace = true
json-patch.workspace = true
