[package]
name = "tracel-core"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
station = ["tracel-client/station"]

[dependencies]
tracel-client.workspace = true
tracel-experiment.workspace = true
url.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
directories = "6.0"
toml = "1.1.2"
crossbeam.workspace = true
tracel-artifact.workspace = true
tracing.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
