[package]
name = "tracel-fleet"
authors.workspace = true
categories.workspace = true
description = "On-device fleet synchronization and model cache for Tracel SDK."
keywords.workspace = true
repository.workspace = true
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tracel-client.workspace = true
tracel-inference.workspace = true
tracel-artifact.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
chrono.workspace = true
tracing.workspace = true
directories = "6.0.0"
arc-swap = "1.9.1"
once_cell = "1.21.4"
fastrand = "2.4.1"

# telemetry
metrics = "0.24.6"
metrics-util = "0.20.4"
tracing-subscriber = "0.3"
metrics-tracing-context = "0.18"
crossbeam.workspace = true
