[package]
name = "tracel-inference"
authors.workspace = true
categories.workspace = true
description = "Inference contracts and adapters for Tracel SDK."
keywords.workspace = true
repository.workspace = true
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
crossbeam.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
